<resources>
    <string name="app_name">Movies App</string>

    <string name="movies_title">Movies</string>
    <string name="tvshows_title">TV Shows</string>
    <string name="watchlist_title">Watchlist</string>
    <string name="favorites_title">Favorites</string>
    <string name="newsfeed_title">News Feed</string>
    <string name="menu_feed_title">Feed</string>
    <string name="actor_title">Actor</string>
    <string name="login_title">Login</string>
    <string name="settings_title">Settings</string>
    <string name="rating_title">Rate this movie</string>


    <string name="director_title">Director:</string>
    <string name="seasons_title">Seasons:</string>
    <string name="expand">See all</string>
    <string name="read_more">Read more</string>
    <string name="stars_title">Stars:</string>
    <string name="writers_title">Writers:</string>
    <string name="reviews_title">Reviews:</string>
    <string name="cast_title">Cast:</string>

    <string name="genre_unknown">Unknown Genre</string>
    <string name="unknown_field">Unknown</string>
    <string name="search">Search</string>
    <string name="forgot_passord">Forgot your details?</string>
    <string name="new_account">Create a new account</string>
    <string name="full_rating">/10</string>

    <string name="series_id_intent">seriesid</string>
    <string name="season_id_intent">seasonid</string>
    <string name="show_id_intent">showId</string>
    <string name="season_num_intent">seasonNum</string>
    <string name="facebook_app_id">680948758773609</string>
    <string-array name="tabs">
        <item>Most popular</item>
        <item>Latest</item>
        <item>Highest rated</item>
    </string-array>
    <string-array name="userTabs">
        <item>Movies</item>
        <item>TvShows</item>
    </string-array>

    <string-array name="TvTabs">
        <item>Most popular</item>
        <item>Latest</item>
        <item>Highest rated</item>
        <item>Airing</item>
    </string-array>

    <string-array name="navigation_drawer_items_array">
        <item>Login</item>
    </string-array>

    <string-array name="navigation_drawer_items_array_login">
        <item>Your Favourites</item>
        <item>Your Watchlist</item>
        <item>Your Ratings</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullBio">See Full Bio</string>
    <string name="hide">Hide</string>
    <string name="episodeIntent">episode</string>
    <string name="seriesId">seriesid</string>
    <string name="seasonId">seasonid</string>
    <string name="actorId">actorId</string>
    <string name="movieIntent">movie</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="userDetails">userdetails</string>
    <string name="LoginError">Wrong username or password, please try again</string>
    <string name="ErrorTitle">Error</string>
    <string name="OkButton">OK</string>
    <string name="website">WebSite</string>
    <string name="signupLink">https://www.themoviedb.org/account/signup</string>
    <string name="resetLink">https://www.themoviedb.org/account/reset-password</string>
    <string name="selectedId">SELECTED_ID</string>
    <string name="edttext">edttext</string>
    <string name="director">Director</string>
    <string name="writing">Writing</string>
    <string name="title">title</string>
    <string name="id">id</string>
    <string name="tag">tag</string>
    <string name="ratethisTVshow">Rate this TV show</string>
    <string name="series">series</string>
    <string name="tv">tv</string>
    <string name="movie">movie</string>
    <string name="addedFavorite">Favorite added</string>
    <string name="removedFavorite">Favorite removed</string>
    <string name="rateThisMovie">Rate this movie</string>
    <string name="watchlistRemoved">Watchlist item removed</string>
    <string name="errorMessage">Error loading data, please check your connection</string>
    <string name="errorTitle">Error</string>
    <string name="watchlistAdded">watchlist added</string>
    <string name="loginAcces">Login to rate movies, manage your Watchlist, and more.</string>
    <string name="loginAccessTitle">Login to Popular Movies</string>
    <string name="notNow">NOT NOW</string>
    <string name="loginButton">LOGIN</string>
    <string name="appName">Popular Movies</string>
    <string name="share">Share</string>
    <string name="tvNotification">tvNotification</string>
    <string name="seriesNotif">There is no upcoming watchlist series releasing today</string>
    <string name="seriesNotFav">There is no upcoming favorite series releasing today</string>
    <string name="movieNotification">movieNotification</string>
    <string name="norificationText">"Have you seen %s ?"</string>
    <string name="imagesTitle">"%s images"</string>
    <string name="welcomeMessage">"Welcome %s"</string>
    <string name="actorBirthData">%1$s, %2$s</string>
    <string name="getTitle">%1$s, %2$s</string>
    <string name="concat">%1$s%2$s</string>
    <string name="movieNotifaction">There is no upcoming favorite movies releasing today</string>
    <string name="idExtra">ID</string>
    <string name="sessionExtra">SESSION</string>
    <string name="name">name</string>
    <string name="connection">Connected</string>
    <string name="noConnection">Disconnected</string>

    <string name="link">link</string>
    <string name="overview">overview</string>
    <string name="fbPackage">com.facebook.katana</string>
    <string name="imageType">image/jpeg</string>

</resources>
