<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0f100f"
    android:orientation="vertical"
    tools:context="atlant.moviesapp.activity.MovieDetailsActivity">


    <include layout="@layout/appbarlayoutclassic" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/play_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="false"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/play_trailer_icon" />

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/gradient_detail" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/movie_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_unknown"
                    android:textColor="@color/fadedText"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="release date"
                    android:textColor="@color/fadedText"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"

                    android:text="@string/director_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/movie_director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown_field"
                    android:textColor="@color/fadedText"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"

                    android:text="@string/writers_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/movie_writors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown_field"
                    android:textColor="@color/fadedText"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="60dp"

                    android:layout_height="wrap_content"
                    android:text="@string/stars_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/movie_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown_field"
                    android:textColor="@color/fadedText"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/star_fill_icon"
                    android:drawablePadding="3dp"
                    android:text="TextView"
                    android:textSize="14sp" />

                <TextView
                    android:text=" |"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/divider" />

                <TextView
                    android:text="Rate this"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rate_txtBtn"
                    android:drawablePadding="3dp"
                    android:drawableLeft="@drawable/star_no_fill_icon"
                    android:layout_weight="1"
                    android:paddingLeft="3dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="Overview text"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/fadedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/cast_title"
                android:textSize="14sp" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/cast_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="6dp"
                android:scrollbars="horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/fadedText" />


            <TextView
                android:id="@+id/tvReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/reviews_title"
                android:textSize="14sp" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
